--- a/sql_getter_app/templates/documentation/newGuy.html
+++ b/sql_getter_app/templates/documentation/newGuy.html
@@ -19,7 +19,7 @@ Main Page
 <!-- the raw block makes it so that no jinja template code will be executed -->
 {% raw %}
 
-<pre style = 'padding: 10px;'>
+<pre style='background-color: white; padding: 10px;'>
 <style>
     li {
         display: inline;
@@ -28,11 +28,18 @@ Main Page
         margin-top: 0;
         margin-bottom: 0;
     }
+    body {
+            overflow-x: hidden; /* Disable horizontal scrolling */
+            word-wrap: break-word; /* Ensure text wraps within its container */
+    }
+    pre {
+        white-space: pre-wrap; /* Preserve formatting */
+    }
 </style>
 
 
 <!--START MY NOTES-->
-<h1>Notes for New Guys</h1>
+<h1>Notes for New People</h1>
 Last updated 4/18/22
 
 <h2>Background</h2>
@@ -44,16 +51,18 @@ Last updated 4/18/22
 
 <h2>About the App</h2>
 <h3>Tech Stack</h3>
-    1) This App is built using the <a href="https://flask.palletsprojects.com/en/2.0.x/">Flask Framework</a>. Check out the Python documentation tab for more info:
-        a) Flask is a <a href="https://www.python.org/about/">Python</a> based framework, but the front end is handled with <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">JavaScript</a>, <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/HTML_basics">HTML</a> and <a href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS</a>. Check out the JavaScript documentation tab for more info.
+    1) This App is built using the <a href="https://flask.palletsprojects.com/en/2.0.x/">Flask Framework</a>. Check out the Python documentation tab 
+       for more info:
+        a) Flask is a <a href="https://www.python.org/about/">Python</a> based framework, but the front end is handled with <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">JavaScript</a>, <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/HTML_basics">HTML</a> and <a href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS</a>. Check out the JavaScript documentation tab 
+           for more info.
         b) We write code in the Microsoft VS Code <a href="https://en.wikipedia.org/wiki/Integrated_development_environment">IDE</a>.
-    2) The Test and Production sites run on an <a href="https://httpd.apache.org/">Apache server</a>, but you can run the Dev site locally by pressing F5 with VS Code open.
-        a) To get to Apache, open the Services app and find Apache2.4 under the Name column. Starting or Restarting Apache will send the current state of the dev site to the test server, 
+    2) The Test and Production sites run on an <a href="https://httpd.apache.org/">Apache server</a>, but you can run the Dev site locally by 
+        a) To get to Apache, open the Services app and find Apache2.4 under the Name column. Starting or Restarting Apache will send the current state 
+           of the dev site to the test server, 
         thus updating the test server code base,
     3) The data is stored in a <a href="https://en.wikipedia.org/wiki/Microsoft_SQL_Server">SQL Server</a> database which you access in Microsoft SQL Server Management Studio.
         a) Open Microsoft SQL Server Management Studio, follow this path: SSVS470/Databases/ControlsTest/Tables
-    4) Our test framework is currently Sinon for JavaScript and Pytest for Python, but I was migrating the tests to <a href="https://www.browserstack.com/guide/python-selenium-to-run-web-automation-test">Selenium</a> because it will eliminate the need to separate tests by using black box testing.
-        a) Go to C:\Selenium-Test-Automation. Open with VS Code. Open the terminal. Type 'python tests.py'
+    4) Our test framework is currently Sinon for JavaScript and Pytest for Python.
     5) We handle version control with <a href="https://en.wikipedia.org/wiki/Git">Git</a> through the source control tab in VS Code.
 
 <h3>Functionality</h3>
@@ -77,7 +86,8 @@ Last updated 4/18/22
     1) Change the color of a button. Then, change it back!
     2) Add some sample data to the ControlsTest database and make it appear in a table (this is simpler than you think).
     3) Duplicate a page. Be sure to add it to the menu so that you can access it! Once you have it working then remove it, of course.
-    4) Make a small change, like the color of a button, and push that update to the test server. This is different than the dev site (look in documentation for updating the test site).
+    4) Make a small change, like the color of a button, and push that update to the test server. This is different than the dev site (look in 
+       documentation for updating the test site).
     5) Consider asking Matt for a simple problem you can work on.
 
     If you do all 5 of these simple tasks then you will be well on your way to understanding the controls app!
@@ -93,28 +103,20 @@ Last updated 4/18/22
         5) Run the test. It should pass.
         6) Every time you update your code you should run all tests and watch for failing tests.
     
-    As you start writing code for the app, follow this process. Write your tests in the Selenium test package so that you don't have to migrate them over later.
+    As you start writing code for the app, follow this process.
 
-<h3>Unfinished Projects</h3>
-    These are the projects that I started but left unfinished. I recommend picking up where I left off.
 
-        - Migrating and combining the JS and Python tests into one Selenium test:
-            - First, write all tests in Selenium,
-            - Then, delete all old tests in both JS and Python.
-        - Service Request functionality. You can check my progress on this <a href='https://trello.com/b/rbjDnFYj/hvac-project-scrum-board'>Trello Board</a>
-            - You may need to ask Matt for permission to access the Trello Board.
-    
-    You might also consider asking Matt what he would have you work on.
-
-<h2>Pro Tips for New Guys</h2>
+<h2>Pro Tips for New People</h2>
     1) Google anything you don't understand. Don't be afraid to copy an entire line of code into Google and search just to see what pops up.
-    2) Use the dev environment to break things. Be sure to push changes to Git constantly so that you can revert back to old versions if you end up breaking something beyond repair.
+    2) Use the dev environment to break things. Be sure to push changes to Git constantly so that you can revert back to old versions if you end up 
+       breaking something beyond repair.
     3) Read all the other documentation pages on this site. If you need to know how to app works, look in the documentation first.
-    4) Follow TDD from the beginning. It is much easier to maintain tests and code as you go along instead of building a backlog of tests and errors to handle later.
+    4) Follow TDD from the beginning. It is much easier to maintain tests and code as you go along instead of building a backlog of tests and errors to 
+       handle later.
     5) Act imperfectly. Progress is more important than perfection. Improve as you go along.
     6) Complete simple tasks instead of reading code (see above).
     7) Use comments to document your code as you go. Once again, its much easier to maintain updated documentation 
-    if you do it as you go. It also helps you understand what you wrote when you come back to it further down the line.
+       if you do it as you go. It also helps you understand what you wrote when you come back to it further down the line.
 
 
 </pre>
