--- a/sql_getter_app/templates/table.html
+++ b/sql_getter_app/templates/table.html
@@ -3,6 +3,11 @@ It extends layout.html (it will fill in the values of layout.html)
 -->
 
 {% extends "layout.html" %}
+{% block extra_styles %}
+    <!-- for modal styling -->
+    <link rel="stylesheet" media="screen" type="text/css" href="{{ url_for('static', filename='css/modals.css') }}">
+{% endblock %}
+
 
 {% block name %}
 {{userN}}
@@ -12,6 +17,7 @@ It extends layout.html (it will fill in the values of layout.html)
 {% block content %}
 <!-- Here we pass data to the javascript about the table by attaching them to the window object
 the curly brackets are places that the template will fill with the arguments of render_template() -->
+
 <script>
     // we sanitize the data by passing it through JSON (a standard for converting objects to strings and vice versa)
     // one of the 
@@ -25,8 +31,7 @@ the curly brackets are places that the template will fill with the arguments of 
     window.userIdNumber = JSON.parse('{{userId|tojson}}');
     var primaryKey = JSON.parse('{{primaryKey|tojson}}');
 </script>
-<!-- This is for testing and is harmless -->
-<p id='demo'></p>
+
 <!-- The title for the table -->
 <h1 class ='title' id='title'> {{mask|safe}} </h1>
 <!-- an optional message about the table -->
@@ -45,4 +50,72 @@ the curly brackets are places that the template will fill with the arguments of 
 </div>
 <!-- a container to put the new items menu -->
 <div id='inputNew' class='inputNew'></div>
+<script type="module">
+    // modal styling is in modals.css
+    import * as TableModals from "{{ url_for('static', filename='tableModals.js') }}";
+    console.log('tableName: ', tableName)// referencing window.tableName
+
+    // create the button
+    let button = document.createElement('p');
+    button.classList = 'BYUbutton';
+    button.id = "addItemBtn"
+    button.innerHTML = '+ '+tableName
+    button.style.fontWeight = "normal";
+    // Trigger modal on Add Item button click
+    button.addEventListener('click', async () => {
+
+        // modal is created here
+        const showModal = await TableModals.createTableModal(window.tableName, window.userIdNumber);
+
+        showModal(); // Show (and create) the modal
+    })
+    document.getElementById("title").appendChild(button);
+
+    // Function to create an xButton
+    function createEditButton() {
+        let xButton = document.createElementNS("http://www.w3.org/2000/svg", "svg");
+        xButton.setAttribute("xmlns", "http://www.w3.org/2000/svg");
+        xButton.setAttribute("viewBox", "0 0 512 512");
+        xButton.classList.add("ionicon");
+
+        // Create path elements
+        let path1 = document.createElementNS("http://www.w3.org/2000/svg", "path");
+        path1.setAttribute("d", "M384 224v184a40 40 0 01-40 40H104a40 40 0 01-40-40V168a40 40 0 0140-40h167.48");
+        path1.setAttribute("fill", "none");
+        path1.setAttribute("stroke", "currentColor");
+        path1.setAttribute("stroke-linecap", "round");
+        path1.setAttribute("stroke-linejoin", "round");
+        path1.setAttribute("stroke-width", "32");
+
+        let path2 = document.createElementNS("http://www.w3.org/2000/svg", "path");
+        path2.setAttribute("d", "M459.94 53.25a16.06 16.06 0 00-23.22-.56L424.35 65a8 8 0 000 11.31l11.34 11.32a8 8 0 0011.34 0l12.06-12c6.1-6.09 6.67-16.01.85-22.38zM399.34 90L218.82 270.2a9 9 0 00-2.31 3.93L208.16 299a3.91 3.91 0 004.86 4.86l24.85-8.35a9 9 0 003.93-2.31L422 112.66a9 9 0 000-12.66l-9.95-10a9 9 0 00-12.71 0z");
+
+        xButton.appendChild(path1);
+        xButton.appendChild(path2);
+        xButton.style.cursor = 'pointer';
+
+        // Add click event listener
+        xButton.addEventListener('click', async () => {
+            const row = xButton.closest('tr');
+            const rowId = row ? row.getAttribute('data-id') : null;
+            
+            const showEditModal = await TableModals.createTableModal(
+                window.tableName,
+                window.userIdNumber,
+                rowId,
+                true
+            );
+            showEditModal();
+        });
+
+        return xButton;
+    }
+
+    // Add buttons to all editCells (assuming they have class 'editCell' since ID should be unique)
+    document.querySelectorAll('#editCell').forEach(editCell => {
+        const button = createEditButton();
+        editCell.appendChild(button);
+    });
+</script>
+
 {% endblock %}
